--- a/src/App.css
+++ b/src/App.css
@@ -762,6 +762,13 @@
   padding-left: 0.25rem;
 }
 
+.settings-intro {
+  font-size: 0.8125rem;
+  color: var(--color-gray-500);
+  line-height: 1.5;
+  margin: 0.5rem 0 1rem 0;
+}
+
 .settings-helper {
   font-size: 0.75rem;
   color: var(--color-gray-400);
